--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,114 @@
-# ============================================
-# .gitignore – SABES Amazon Logistics Project
-# ============================================
-
+# Byte-compiled / optimized / DLL files
 __pycache__/
-.ipynb_checkpoints/
-*.pyc
-*.pyo
-*.pyd
-*.pkl
-*.tmp
+*.py[cod]
+*$py.class
+
+# C extensions
+*.so
+
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+pip-wheel-metadata/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# PyInstaller
+*.manifest
+*.spec
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis/
+.pytest_cache/
+
+# Jupyter Notebook
+.ipynb_checkpoints
+*/.ipynb_checkpoints/*
+
+# IPython
+profile_default/
+ipython_config.py
+
+# pyenv
+.python-version
+
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# Spyder project settings
+.spyderproject
+.spyproject
+
+# Rope project settings
+.ropeproject
+
+# mkdocs documentation
+/site
+
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+# Pyre type checker
+.pyre/
+
+# Results and outputs (generados al ejecutar)
+results/*.png
+results/*.pdf
+results/*.csv
+!results/.gitkeep
+
+# Logs
+*.log
+amazon_logistics.log
+
+# OS specific
 .DS_Store
 Thumbs.db
+
+# IDE
 .vscode/
 .idea/
-*.log
-build/
-dist/
-*.egg-info/
-*~
-*.bak
 *.swp
+*.swo
+*~
 
-# Auto-generated results
-/results/*.png
-/results/*.pdf
-/results/*.csv
-/results/*.xlsx
-/results/*.json
+# Temporary files
+*.tmp
+temp/
+tmp/
